# test_task

./: README.md
program1/src/: CMakeLists.txt  buffer.cpp  buffer.h  data_process.cpp  data_process.h  input_thread.cpp  input_thread.h  main.cpp  output_thread.cpp  output_thread.h  socket.cpp  socket.h
program2/src/: CMakeLists.txt  main.cpp  server_socket.cpp  server_socket.h
src/: CMakeLists.txt  buffer.h  config.h  data_process.h  input_thread.h  output_thread.h
